# bluepill-midi-suite-

./: .gitignore  README.md
.github/workflows/: release.yml
android-sampler/: .gitignore  settings.gradle.kts
android-sampler/app/: build.gradle.kts
android-sampler/app/src/androidTest/java/com/example/drumsamplebluepill/: ExampleInstrumentedTest.kt
android-sampler/app/src/main/: AndroidManifest.xml
android-sampler/app/src/main/java/com/example/drumsamplebluepill/: DrumViewModel.kt  MainActivity.kt  MidiEngine.kt  SampleEngine.kt  SerialEngine.kt
android-sampler/app/src/main/java/com/example/drumsamplebluepill/ui/: DrumPadScreen.kt
android-sampler/app/src/main/java/com/example/drumsamplebluepill/ui/kit/: KitCanvas.kt  KitModels.kt  KitScreen.kt  KitViewModel.kt
android-sampler/app/src/main/java/com/example/drumsamplebluepill/ui/theme/: Color.kt  Theme.kt  (+2 more)
android-sampler/app/src/main/res/values/: strings.xml  themes.xml
android-sampler/app/src/main/res/xml/: device_filter.xml
android-sampler/app/src/test/java/com/example/drumsamplebluepill/: ExampleUnitTest.kt
android-sampler/gradle/wrapper/: gradle-wrapper.properties
configurator/: index.html  package-lock.json  package.json  tsconfig.json
configurator/src/: App.css  App.tsx
configurator/src-tauri/: Cargo.toml  tauri.conf.json
configurator/src-tauri/icons/: icon.icns
configurator/src-tauri/linux/: 99-bluepill-midi.rules  bluepill-midi-trigger.desktop  postinst
configurator/src-tauri/src/: main.rs
firmware/: platformio.ini
firmware/ld/: stlink_c8_128k.ld
firmware/src/: main.cpp
