[package]
name = "midi-trigger-config"
version = "0.1.0"
description = "Configurador do BluePill MIDI Trigger"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
